--- a/index.html
+++ b/index.html
@@ -1,73 +1,242 @@
 <!doctype html>
-<html lang="en">
-<!-- === -->
-<!-- === -->
-<!-- === -->
+
+<!--
+
+        ╥ DESIGNED AND DEVELOPED BY...
+        ║ 
+        ║   /       ───
+        ║ ╓──╖ ╓───────╖ ╓╖ ╓───╖ ╓───╖ TM
+        ║ ║  ║ ║       ║ ╙╜ ║   ║ ║   ║  
+    ╓───╫─╫──╜ ╙──╖ ╓──╫──╖ ║   ║ ║   ║
+    ║   ║ ║       ║ ║  ║  ║ ║   ║ ║   ║
+    ║   ║ ╙───────╜ ╙──╜  ║ ╙───╫─╜   ║ 
+    ║   ║ SINCE 20ELEVEN  ║     ║     ╙ LLC © HTTPS://DESAIGN.APP 
+    ╙───╜                 ╙─────╜             ALL RIGHTS RESERVED
+  
+-->
+
+<html dir="ltr" lang="en-US">
+
+<!--=============================================-->
+<!--=============================================-->
+<!--=============================================-->
+
 <head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--<meta http-equiv="refresh" content="10" />just for auto-refresh in dev-->
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="author" content="#DESAIGNER" />
-<meta name="description" content="#"/> 
-<meta name="keywords" content="#"/>
-<link rel="shortcut icon" href="assets/images/favicon.ico" />
-<title>GOT gif?</title>
-<!--===CSS===-->
-<!-- reset CSS -->
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-<!-- other CSS -->
-	<!--Awesome Fonts Library-->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!------->
-	<!--BootStrap CSS-->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-	<!------->
-<!-- developer CSS -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <!--:::::::::::::::::::::::::::::::::::::::
+  Required meta tags
+::::::::::::::::::::::::::::::::::::::::-->
+
+    <meta charset="utf-8">
+    <!--just for auto-refresh or redirect use the following meta tag-->
+    <!--<meta http-equiv="refresh" content="10" />-->
+    <!--<meta http-equiv="refresh" content="0; url=http://website.com/" />-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="#DESAIGNER" />
+    <meta name="description" content="#" />
+    <meta name="keywords" content="#" />
+    <link rel="shortcut icon" type="image/gif" href="https://raw.githubusercontent.com/kratuvwxyz/assets2/master/images/favicon.gif" />
+
+    <!--:::::::::::::::::::::::::::::::::::::::
+  Stylesheets
+::::::::::::::::::::::::::::::::::::::::-->
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,400i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+    <!--Reset CSS-->
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/kratuvwxyz/assets2/tree/master/css/reset.css">
+
+    <!--Other CSS-->
+
+    <!--W3.CSS-->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--++++++-->
+    <!--BootStrap CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!--++++++-->
+
+    <!--Awesome Fonts Library-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--++++++-->
+
+    <!--Developer CSS-->
+    <!--STYLE CSS-->
+    <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background-image: url('');
+            background-color: whitesmoke;
+            letter-spacing: 1px;
+        }
+        
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: 'IBM Plex Serif', serif;
+        }
+        
+        footer {
+            background-image: url(https://raw.githubusercontent.com/kratuvwxyz/assets2/master/images/background/pattern/confectionary.png);
+            background-color: khaki;
+        }
+    </style>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!--++++++-->
+
+
+    <!--:::::::::::::::::::::::::::::::::::::::
+  JavaScript
+::::::::::::::::::::::::::::::::::::::::-->
+    <!--jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--++++++-->
+
+
+
+    <!--:::::::::::::::::::::::::::::::::::::::
+  Document Title
+::::::::::::::::::::::::::::::::::::::::-->
+
+    <title>GOT GIF?</title>
 
 </head>
 
+<!--=============================================-->
+<!--=============================================-->
+<!--=============================================-->
+
 <body class="bg-info">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>		
-<script type="text/javascript" src="assets/js/main.js"></script>	
 
-		<header class="bg-dark p-4">
-		<a href="#"><span class="text-info navbar-brand"><img src="https://fontmeme.com/permalink/180513/d0ff90780e55eaba59ea4fe17a17f9bd.png" width="75%" height="75%"></span></a>
-	</header>
+    <!--:::::::::::::::::::::::::::::::::::::::
+  Document Wrapper
+::::::::::::::::::::::::::::::::::::::::-->
 
-	<section>
-		<nav class="navbar navbar-dark bg-dark">
-				  <form class="form-inline" id="gameOfGifronNav">
-					<button data-game="Game of Thrones" class="btn btn-outline-light search m-1" type="button">Game Of Thrones</button>
-					<button data-game="Game of Thrones season 1" class="btn btn-outline-light search m-1" type="button">Season 1</button>
-					<button data-game="Game of Thrones season 2" class="btn btn-outline-light search m-1" type="button">Season 2</button>
-					<button data-game="Game of Thrones season 3" class="btn btn-outline-light search m-1" type="button">Season 3</button>
-					<button data-game="Game of Thrones season 4" class="btn btn-outline-light search m-1" type="button">Season 4</button>
-					<button data-game="Game of Thrones season 5" class="btn btn-outline-light search m-1" type="button">Season 5</button>
-					<button data-game="Game of Thrones season 6" class="btn btn-outline-light search m-1" type="button">Season 6</button>
-					<button data-game="Game of Thrones season 7" class="btn btn-outline-light search m-1" type="button">Season 7</button>
-				  </form>
-		</nav>
-	</section>
-	<div class="row bg-danger">
-		<div class="col-xl-12">
-			<nav class="navbar navbar-danger bg-danger">
-				<form class="form-inline" id="movie-form">
-					<input class="form-control mr-sm-2" type="search" id="movie-input" placeholder="You know nothing..." aria-label="Search">
-					<i class="btn btn-outline-danger my-2 my-sm-0 fa fa-search" id="add-movie" type="submit"></i>
-				</form>
-						<form class="form-inline" id="emptyButton">
-							<strong class="text-warning">Your Search Results: &#160;&#160;</strong>
-							<div id="movies-view"></div>							
-						</form>
-			</nav>
-		</div>
-	</div>
-	<div class="p-3 bg-info main" id="gifs-appear-here"></div>
-	<script type="text/javascript" src="assets/js/main.js">
-	</script>
+    <div class="row bg-dark">
+        <header class="bg-dark p-4">
+            <a href="#">
+                <img src="https://fontmeme.com/permalink/180513/d0ff90780e55eaba59ea4fe17a17f9bd.png" class="p-4">
+            </a>
+        </header>
+        <section class="bg-dark p-3" style="top: 0;">
+            <nav class="navbar navbar-dark bg-dark">
+                <form class="form-inline" id="gameOfGifronNav">
+                    <button data-game="Game of Thrones" class="btn btn-outline-light search m-1" type="button">Game Of Thrones</button>
+                    <button data-game="Game of Thrones season 1" class="btn btn-outline-light search m-1" type="button">Season 1</button>
+                    <button data-game="Game of Thrones season 2" class="btn btn-outline-light search m-1" type="button">Season 2</button>
+                    <button data-game="Game of Thrones season 3" class="btn btn-outline-light search m-1" type="button">Season 3</button>
+                    <button data-game="Game of Thrones season 4" class="btn btn-outline-light search m-1" type="button">Season 4</button>
+                    <button data-game="Game of Thrones season 5" class="btn btn-outline-light search m-1" type="button">Season 5</button>
+                    <button data-game="Game of Thrones season 6" class="btn btn-outline-light search m-1" type="button">Season 6</button>
+                    <button data-game="Game of Thrones season 7" class="btn btn-outline-light search m-1" type="button">Season 7</button>
+                    <button data-game="Game of Thrones season 8" class="btn btn-outline-light search m-1" type="button">Season 8</button>
+                </form>
+                <span class="mx-1 text-muted">Click again to view more!</span>
+            </nav>
+        </section>
+    </div>
+    <div class="row bg-danger">
+        <div class="col-md-12">
+            <nav class="navbar navbar-danger bg-danger">
+                <form class="form-inline" id="movie-form">
+                    <input class="form-control mr-sm-2" type="search" id="movie-input" placeholder="You know nothing..." aria-label="Search">
+                    <i class="p-2 fa fa-search" id="add-movie" type="submit"></i>
+                </form>
+                <form class="form-inline" id="emptyButton">
+                    <strong class="text-warning">Your Search Results: &#160;&#160;</strong>
+                    <div id="movies-view"></div>
+                </form>
+            </nav>
+        </div>
+    </div>
+    <div class="p-3 bg-info main" id="gifs-appear-here"></div>
+
+    <!--:::::::::::::::::::::::::::::::::::::::
+  Footer
+::::::::::::::::::::::::::::::::::::::::-->
+    <br><br><br><br><br><br><br><br><br>
+
+    <section id="footerSection">
+
+        <footer class="w3-container w3-bottom w3-topbar w3-border-dark-gray w3-khaki" id="footerCopyright">
+
+            <!--links-->
+            <div id="footerLinks" class="w3-padding-16">
+                <a href="#" target="_blank"><i class="fa fa-github w3-btn" style="font-size:25px;color: #bd2c00;"></i></a> |
+                <a href="#" target="_blank"><i class="fa fa-linkedin-square w3-btn" style="font-size:25px;color: #0077b5;"></i></a> |
+                <a href="index.html" class="w3-text-dark-gray w3-btn">#GOTgif</a>
+                <hr>
+            </div>
+
+            <!--logo-->
+            <div id="logoCopyright" class="w3-row w3-display-container w3-padding-24">
+
+                <img src="https://kratuvwxyz.github.io/assets/images/footer/DESAIGNLLC.svg" alt="desaign llc" height="60" border="none" style="padding-bottom: 5px;" />
+
+                <span class="w3-display-bottom" style="white-space: nowrap; font-size: 12px; line-height: 20px; letter-spacing: 1px; color: #34495e; vertical-align: bottom;">&#160;&copy; 2011-<script type="text/javascript">var d = new Date();document.write(d.getFullYear());</script> <a href="http://desaign.studio" style="color:#e74c3c; text-decoration: underline; vertical-align: bottom;" target="_blank" >DESAIGN.STUDIO</a> All Rights Reseverd.</span>
+
+                <!--plog number-->
+                <div id="plog" class="w3-bottom w3-khaki" style="z-index: 99999"><span class="w3-display-bottomright w3-padding-small w3-margin-right w3-opacity" style="font-size: 10px;">18325C01AA</span></div>
+
+            </div>
+
+        </footer>
+
+        <script type="text/javascript">
+            window.onscroll = function() {
+                scrollFunction()
+            };
+
+            function scrollFunction() {
+                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                    document.getElementById("footerCopyright").style.bottom = "-140px";
+                } else {
+                    document.getElementById("footerCopyright").style.bottom = "0px";
+                }
+            }
+
+            $(".w3-btn").hover(function() {
+                $(this).css("box-shadow", "none");
+            });
+        </script>
+
+    </section>
+
+
+    <!--:::::::::::::::::::::::::::::::::::::::
+External JavaScripts
+::::::::::::::::::::::::::::::::::::::::-->
+
+    <!-- Developer JavaScript -->
+    <script type="text/javascript" src="assets/js/main.js"></script>
+
+    <script type="text/javascript">
+    </script>
 
 </body>
+
+<!--==========================================================-->
+<!--==========================================================-->
+<!--=============================================================
+
+        ╥ DESIGNED AND DEVELOPED BY...
+        ║ 
+        ║   /       ───
+        ║ ╓──╖ ╓───────╖ ╓╖ ╓───╖ ╓───╖ TM
+        ║ ║  ║ ║       ║ ╙╜ ║   ║ ║   ║  
+    ╓───╫─╫──╜ ╙──╖ ╓──╫──╖ ║   ║ ║   ║
+    ║   ║ ║       ║ ║  ║  ║ ║   ║ ║   ║
+    ║   ║ ╙───────╜ ╙──╜  ║ ╙───╫─╜   ║ 
+    ║   ║ SINCE 20ELEVEN  ║     ║     ╙ LLC © HTTPS://DESAIGN.APP 
+    ╙───╜                 ╙─────╜             ALL RIGHTS RESERVED
+  
+==============================================================-->
+<!--==========================================================-->
+<!--==========================================================-->
+
 </html>
