--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 ::::::::::::::::::::::::::::::::::::::::-->
 
     <div class="row bg-dark">
-        <header class="bg-dark p-4">
+        <header class="bg-dark mx-4">
             <a href="#">
-                <img src="https://fontmeme.com/permalink/180513/d0ff90780e55eaba59ea4fe17a17f9bd.png" class="p-4">
+                <img src="assets/images/GOTicon.svg" height="100%" class="p-4">
             </a>
         </header>
         <section class="bg-dark p-3" style="top: 0;">
