--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 ::::::::::::::::::::::::::::::::::::::::-->
 
     <div class="row bg-dark">
-        <header class="bg-dark mx-4">
+        <header class="bg-dark m-5" style="height: 100px;">
             <a href="#">
-                <img src="assets/images/GOTicon.svg" height="100%" class="p-4">
+                <img src="assets/images/GOTicon.svg" height="100%">
             </a>
         </header>
         <section class="bg-dark p-3" style="top: 0;">
