--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <span class="w3-display-bottom" style="white-space: nowrap; font-size: 12px; line-height: 20px; letter-spacing: 1px; color: #34495e; vertical-align: bottom;">&#160;&copy; 2011-<script type="text/javascript">var d = new Date();document.write(d.getFullYear());</script> <a href="http://desaign.studio" style="color:#e74c3c; text-decoration: underline; vertical-align: bottom;" target="_blank" >DESAIGN.STUDIO</a> All Rights Reseverd.</span>
 
                 <!--plog number-->
-                <div id="plog" class="w3-bottom w3-khaki" style="z-index: 99999"><span class="w3-display-bottomright w3-padding-small w3-margin-right w3-opacity" style="font-size: 10px;">18325C01AA</span></div>
+                <div id="plog" class="w3-bottom w3-khaki" style="z-index: 99999"><span class="w3-display-bottomright w3-padding-small w3-margin-right w3-opacity" style="font-size: 10px;">18325C01AB</span></div>
 
             </div>
 
@@ -207,10 +207,12 @@
             };
 
             function scrollFunction() {
-                if (document.body.scrollTop > 1 || document.documentElement.scrollTop > 1) {
-                    document.getElementById("footerCopyright").style.bottom = "-140px";
-                } else {
+//                 if (document.body.scrollTop > 1 || document.documentElement.scrollTop > 1) 
+                if (document.footer.scrollTop > 1)
+                {
                     document.getElementById("footerCopyright").style.bottom = "0px";
+                } else {
+                    document.getElementById("footerCopyright").style.bottom = "-140px";
                 }
             }
 
