--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
             function scrollFunction() {
 //                 if (document.body.scrollTop > 1 || document.documentElement.scrollTop > 1) 
-                if (document.footer.scrollTop > 1)
+                if (document.body.scrollBottom > 20 || document.documentElement.scrollBottom > 20)
                 {
                     document.getElementById("footerCopyright").style.bottom = "0px";
                 } else {
