--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 //                 if (document.body.scrollTop > 1 || document.documentElement.scrollTop > 1) 
                 if (document.body.scrollBottom = 20 || document.documentElement.scrollBottom = 20)
                 {
+                    alert ('hello world');
                     document.getElementById("footerCopyright").style.bottom = "0px";
                 } else {
                     document.getElementById("footerCopyright").style.bottom = "-140px";
