--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <nav class="navbar navbar-danger bg-danger">
                 <form class="form-inline" id="movie-form">
                     <input class="form-control mr-sm-2" type="search" id="movie-input" placeholder="You know nothing..." aria-label="Search">
-                    <i class="m-1 p-2 fa fa-search" id="add-movie" type="submit"><p> Search</p></i>
+                    <i class="m-1 p-2 fa fa-search" id="add-movie" type="submit"><small> Search</small></i>
                 </form>
                 <form class="form-inline" id="emptyButton">
                     <strong class="text-warning">Your Search Results: &#160;&#160;</strong>
