--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     </nav>
 
     <!-- Developer JavaScripts -->
+    <script src="https://desaign.app/clients/cli/javascript/desaign-loader/desaign-loader.js"></script>
     <script src="./script.js" type="text/javascript"></script>
   </body>
 </html>
